# pydrive

./: README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  temp_test.py
src/pydrive/: client.py  filemanager.py  main.py  server.py  server_app.py  temp_test.py  user_app.py
src/pydrive/core/: datapackage.py  filemanager.py  server.py  user.py
src/pydrive/gui/: create_server.py  fileexplorer.py  gui_filemanager.py  gui_server.py  gui_user.py  treedirectory.py  window_manager.py  windowmanager.py
